kubernetes-networks/web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web      # Название нашего объекта Deployment
spec:
  replicas: 3    # Начнем с одного пода
  selector:      # Укажем, какие поды относятся к нашему Deployment:
    matchLabels: # - это поды с меткой
      app: web   # app и ее значением web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  template:      # Теперь зададим шаблон конфигурации пода
    metadata:
      name: web # Название Pod
      labels: # Метки в формате key: value
        app: web
    spec: # Описание Pod
      containers: # Описание контейнеров внутри Pod
        - name: web # Название контейнера
          image: registry.hub.docker.com/faoxis/otus-nginx:0.0.4 # Образ из которого создается контейнер

          # --- BEGIN ---
          readinessProbe: # Добавим проверку готовности
            httpGet: # веб-сервера отдавать
              path: /index.html # контент
              port: 8000
          livenessProbe:
            tcpSocket: { port: 8000 }
          # --- END ---

          volumeMounts:
            - name: app
              mountPath: /app
      volumes:
        - name: app
          emptyDir: { }
